Added game elements and a fundamental

--- a/app/src/main/res/xml/fundamentals.xml
+++ b/app/src/main/res/xml/fundamentals.xml
@@ -50,6 +50,7 @@
         <element name="Rule" />
         <element name="Saving &amp; Loading" />
         <element name="Score" />
+        <element name="Searching" />
         <element name="Sight" />
         <element name="Skill" />
         <element name="Sky" />
