And added Auto-Sort When Locking action to menu and fixed a bug in moving cards down

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -117,6 +117,11 @@
         android:checkable="true"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_autoSortWhenLocking"
+        android:title="@string/action_autoSortWhenLocking"
+        android:checkable="true"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_autoUpdateSettingChangesToggle"
         android:title="@string/action_autoUpdateSettingChanges"
         android:checkable="true"
